manifests/podinfo-grpc.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: podinfo-grpc
  labels:
    app: podinfo-grpc
spec:
  replicas: 2
  strategy:
    canary:
      stableService: podinfo-grpc
      canaryService: podinfo-grpc-canary
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            grpcRoute: podinfo-grpc-route
            namespace: default
      steps:
        - setWeight: 50
        - pause: { }
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: podinfo-grpc
  template:
    metadata:
      labels:
        app: podinfo-grpc
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: podinfo-grpc
          image: stefanprodan/podinfo:6.7.0
          command:
            - ./podinfo
            - --port=9898
            - --grpc-port=9999
            - --grpc-service-name=podinfo
            - --config=grpc4.yaml
          ports:
            - name: grpc
              containerPort: 9999
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-grpc
spec:
  ports:
    - port: 80
      targetPort: grpc
      protocol: TCP
  selector:
    app: podinfo-grpc
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-grpc-canary
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: grpc
      protocol: TCP
  selector:
    app: podinfo-grpc
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: podinfo-grpc-route
  annotations:
    retry.linkerd.io/grpc: 'cancelled,deadline-exceeded,internal,resource-exhausted,unavailable'
    retry.linkerd.io/limit: '3'
    retry.linkerd.io/timeout: 300ms
spec:
  parentRefs:
    - name: podinfo-grpc
      namespace: default
      kind: Service
      group: core
  rules:
    - backendRefs:
        - name: podinfo-grpc
          port: 80
          kind: Service
        - name: podinfo-grpc-canary
          port: 80
          kind: Service
